--- a/general.html
+++ b/general.html
@@ -13,7 +13,7 @@
     <a href="about.html" style="text-decoration:none">About me</a><BR><BR>
     <a href="general.html" style="text-decoration:none">General information</a><BR><BR>
     <a href="former.html" style="text-decoration:none">Former clubs</a><BR><BR>
-    <a href="site.html" style="text-decoration:none">Home page</a>
+    <a href="index.html" style="text-decoration:none">Home page</a>
   </div>
   <div class="grid-element main"><ul>
               <li>Yasin Caliskan</li>
