--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <a href="about.html" style="text-decoration:none">About me</a><BR><BR>
     <a href="general.html" style="text-decoration:none">General information</a><BR><BR>
     <a href="former.html" style="text-decoration:none">Former clubs</a><BR><BR>
-    <a href="site.html" style="text-decoration:none">Home page</a>
+    <a href="index.html" style="text-decoration:none">Home page</a>
   </div>
   <div class="grid-element main"><img alt="Smiley face" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJFv2eOV8hGn-kqjGZiu5ju5Suoj6Oj-cvyWouK3vC8_I2TUg2Bw">
      <p>Ik speel sinds het seizoen 2017-18 bij SV Argon o-17-1. Ik sta als op positie op doel. We hebben een selectie van 20 spelers wat bestaat uit 18 veldspelers en 2 keepers.</div>
